--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,10 @@
             <div id="post">
                 <h1>Aqui vamos a hacer un blog post</h1>
                 <p> Y este es el parrafo de inicio</p>
+                <p> 
+                    Los blogs son la mejor forma de compartir
+                    información.
+                </p>
             </div>
         </div>
     </body>
