--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 cabecera
             <div id="post">
-                <h1>Aqui vamos a hacer un blog post</h1>
+                <h1>Aqui vamos a hacer un blog master</h1>
                 <p> Y este es el parrafo de inicio</p>
                 <p> 
                     Los blogs son la mejor forma de compartir
