--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
     <head>
         <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
-    <script async src='/cdn-cgi/challenge-platform/h/b/scripts/invisible.js?ts=1652468400'></script></head>
+    </head>
     <body>
         <div id="container">
             <div id="cabecera">
@@ -11,11 +11,14 @@
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-                <h1>Este es el tÃ­tulo atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increÃ©ibles que se pueden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir informaciÃ³n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadÃ­sticamente no lo eres.... por ahora.</p>
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
+	    <div id="footer">
+		Hecho con amor en Platzi &lt;3
+	    </div>
         </div>
-    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'70adc5b7bb053eb8',m:'TH_VkS7mDXPrush7EIdxzkT2f72DxE0CjlxhMYObCTM-1652469846-0-Ac0xMHu8jFpnj3fQlH1B6lJqqN9uGuYTK2tml2gqAoPXuDTzvR2PAUFYQV6bqcNfzQ5rxTZ+F/EbH6uwfkJ1INwb1euOz1/G81uXCUeDzJzyQL6MD6AL1WA4ciQSWISdtGH5bPzfn9nqZEiEQYK8ItnZykpBX1HHO24kr9fW5q3Iwbl64wHEcpMF/RMUb7R4vxyCE8fJUgOyTw65tlY4yV/H+jkepEv+zVqSPT6PzQtvEFIv16jD12dUKORsvrQSKQ==',s:[0x05f3a85f72,0xfa72ebb651],u:'/cdn-cgi/challenge-platform/h/b'}})();</script></body>
+    </body>
 </html>
